--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     .label-dot-wrapper:hover {
       transform: translate(-50%, -60%);
     }
+    console.log("初始 zoom:", map.getZoom());
 
     .label-text {
       font-size: 13px;
@@ -177,6 +178,7 @@
   </script>
 </body>
 </html>
+
 
 
 
